<resources>
    <string name="app_name">GX Sales</string>
    <string name="gx">GX</string>
    <string name="sales">Sales</string>
    <string name="committed_to_better_quality">Committed to better quality</string>
    <string name="email">Email</string>
    <string name="e_g_john_example_com">e.g john@example.com</string>
    <string name="password">Password</string>
    <string name="hint_password">••••••••</string>
    <string name="sign_in">Sign In</string>
    <string name="globalxtreme_2023_v10_0">GlobalXtreme © 2023 - V10.0</string>
    <string name="home">Home</string>
    <string name="leads">Leads</string>
    <string name="shop">Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_all_leads">Total All Leads</string>
    <string name="filter">Filter</string>
    <string name="e_g_john_doe">e.g John Doe</string>
    <string name="dd_mm_yyyy_dd_mm_yyyy">dd/mm/yyyy - dd/mm/yyyy</string>
    <string name="status">Status</string>
    <string name="select_status">- Select Status -</string>
    <string name="channel">Channel</string>
    <string name="media">Media</string>
    <string name="source">Source</string>
    <string name="search">Search</string>
    <string name="reset">Reset</string>
    <string name="add_lead">Add Lead</string>
    <string name="branch_office">Branch Office</string>
    <string name="select_branch_office">Select Branch Office</string>
    <string name="select_branch_office_hint">- Select Branch Office -</string>
    <string name="personal_data">Personal Data</string>
    <string name="full_name_mandatory">Full Name <font fgcolor='#FF0000'>*</font></string>
    <string name="cell_phone_number_mandatory">Cell Phone Number <font fgcolor='#FF0000'>*</font></string>
    <string name="_62">+62</string>
    <string name="_879993xxxx">879993xxxx</string>
    <string name="e_g_jl_kerobokan_388x">e.g Jl Kerobokan 388x</string>
    <string name="latitude_mandatory">Latitude <font fgcolor='#FF0000'>*</font></string>
    <string name="e_g_8_44444">e.g -8.44444</string>
    <string name="e_g_115_00003">e.g 115.00003</string>
    <string name="address">Address</string>
    <string name="choose_gender">Choose Gender ?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_location">Select Location</string>
    <string name="identity_number">Identity Number</string>
    <string name="e_g_1879920xxxxxx">e.g 1879920xxxxxx</string>
    <string name="upload_identity_passport">Upload Identity / Passport</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="next">Next</string>
    <string name="lead_information">Lead Information</string>
    <string name="lead_type_mandatory">Lead Type<font fgcolor='#FF0000'>*</font></string>
    <string name="select_lead_type">- Select Lead Type -</string>
    <string name="lead_channel_mandatory">Lead Channel<font fgcolor='#FF0000'>*</font></string>
    <string name="select_lead_channel">- Select Lead Channel -</string>
    <string name="lead_media">Lead Media<font fgcolor='#FF0000'>*</font></string>
    <string name="select_lead_media">- Select Lead Media -</string>
    <string name="lead_source">Lead Source</string>
    <string name="select_lead_source">- Select Lead Source -</string>
    <string name="lead_status_mandatory">Lead Status<font fgcolor='#FF0000'>*</font></string>
    <string name="select_lead_status">- Select Lead Status -</string>
    <string name="lead_probability_mandatory">Lead Probability<font fgcolor='#FF0000'>*</font></string>
    <string name="select_lead_probability">- Select Lead Probability -</string>
    <string name="notes">Notes</string>
    <string name="submit">Submit</string>
    <string name="previous">Previous</string>
    <string name="stock">Stock :</string>
    <string name="type">Type :</string>
    <string name="w_tax">w/Tax:</string>
    <string name="logout">Logout</string>
</resources>