<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:background="@color/white"
    tools:context=".presentation.add_edit_lead.fragment.LeadOfficeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lead_information"
                android:fontFamily="@font/inter_bold"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_16sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lead_type_mandatory"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/inter_regular"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/text_grey"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="dropdown_menu"
                android:layout_marginTop="@dimen/_4sdp"
                app:boxStrokeWidth="0.8dp"
                app:boxStrokeColor="@color/outline_stroke"
                app:boxCornerRadiusTopStart="@dimen/_8sdp"
                app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/tv_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/select_lead_type"
                    android:enabled="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textColorHint="@color/colorTextHint"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lead_channel_mandatory"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/inter_regular"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/text_grey"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_channel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="dropdown_menu"
                android:layout_marginTop="@dimen/_4sdp"
                app:boxStrokeWidth="0.8dp"
                app:boxStrokeColor="@color/outline_stroke"
                app:boxCornerRadiusTopStart="@dimen/_8sdp"
                app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/tv_channel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/select_lead_channel"
                    android:enabled="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textColorHint="@color/colorTextHint"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lead_media"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/inter_regular"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/text_grey"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="dropdown_menu"
                android:layout_marginTop="@dimen/_4sdp"
                app:boxStrokeWidth="0.8dp"
                app:boxStrokeColor="@color/outline_stroke"
                app:boxCornerRadiusTopStart="@dimen/_8sdp"
                app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/tv_media"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/select_lead_media"
                    android:enabled="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textColorHint="@color/colorTextHint"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lead_source"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/inter_regular"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/text_grey"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="dropdown_menu"
                android:layout_marginTop="@dimen/_4sdp"
                app:boxStrokeWidth="0.8dp"
                app:boxStrokeColor="@color/outline_stroke"
                app:boxCornerRadiusTopStart="@dimen/_8sdp"
                app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/tv_source"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/select_lead_source"
                    android:enabled="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textColorHint="@color/colorTextHint"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lead_status_mandatory"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/inter_regular"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/text_grey"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="dropdown_menu"
                android:layout_marginTop="@dimen/_4sdp"
                app:boxStrokeWidth="0.8dp"
                app:boxStrokeColor="@color/outline_stroke"
                app:boxCornerRadiusTopStart="@dimen/_8sdp"
                app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/tv_status"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/select_lead_status"
                    android:enabled="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textColorHint="@color/colorTextHint"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lead_probability_mandatory"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/inter_regular"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/text_grey"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_probability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="dropdown_menu"
                android:layout_marginTop="@dimen/_4sdp"
                app:boxStrokeWidth="0.8dp"
                app:boxStrokeColor="@color/outline_stroke"
                app:boxCornerRadiusTopStart="@dimen/_8sdp"
                app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/tv_probability"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/select_lead_probability"
                    android:enabled="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textColorHint="@color/colorTextHint"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/inter_regular"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/text_grey"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                app:boxStrokeWidth="0.8dp"
                app:boxStrokeColor="@color/outline_stroke"
                app:boxCornerRadiusTopStart="@dimen/_8sdp"
                app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_notes"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:gravity="start"
                    android:textColorHint="@color/colorTextHint"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/outline_stroke"
                android:layout_marginTop="@dimen/_12sdp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_12sdp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_submit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="@string/submit"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:textSize="@dimen/_10ssp"
                    android:enabled="false"
                    app:backgroundTint="@color/outline_stroke"
                    app:cornerRadius="@dimen/_8sdp"
                    app:iconTint="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.48"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_prev"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="@string/previous"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:textSize="@dimen/_10ssp"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="@dimen/_8sdp"
                    app:iconTint="@color/black"
                    app:strokeWidth="@dimen/_1sdp"
                    app:strokeColor="@color/yellow_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.48"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>