<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".presentation.main.fragment.leads.ui.LeadsFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/leads"
        android:textAlignment="center"
        android:textSize="@dimen/_21sdp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:paddingHorizontal="@dimen/_8sdp"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/filter"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="24dp"
        android:textSize="@dimen/_10ssp"
        app:backgroundTint="@color/white"
        app:cornerRadius="@dimen/_8sdp"
        app:icon="@drawable/ic_filter"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:strokeColor="@color/outline_stroke"
        app:strokeWidth="@dimen/_1sdp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/_3sdp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/shape_rounded_fill_8"
        android:drawableEnd="@drawable/ic_search"
        android:drawablePadding="@dimen/_8sdp"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/e_g_john_doe"
        android:inputType="textPersonName"
        android:paddingHorizontal="@dimen/_12sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_filter"
        app:layout_constraintEnd_toStartOf="@+id/btn_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_filter" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@color/outline_stroke"
        app:layout_constraintTop_toBottomOf="@id/btn_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_leads"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/item_lead"/>

</androidx.constraintlayout.widget.ConstraintLayout>